--- a/projeto.cordel/projeto.cordel.html
+++ b/projeto.cordel/projeto.cordel.html
@@ -105,7 +105,8 @@
 </p>
 </section>
 <footer>
-    <p>Site criado por <strong>Anehelly R. Perrony </strong>para o <strong>Curso em Vídeo</strong></p>
+    <p>Site criado por <a href="https://github.com/Anehelly" target="_blank"><strong>Anehelly R. Perrony </strong></a>para o
+    <a href="https://www.cursoemvideo.com/" target="_blank"><strong>Curso em Vídeo</strong></a></p>
 </footer>
 </body>
 </html>
