--- a/exercícios/ex.023/tabela002.html
+++ b/exercícios/ex.023/tabela002.html
@@ -33,6 +33,9 @@
         td.num{
             text-align: right;
         }
+        tbody > tr:nth-child(2n){/*Efeito zebrado*/
+            background-color: lightgray;
+        }
     </style>
 </head>
 <body>
