--- a/exercícios/ex.023/tabela002.html
+++ b/exercícios/ex.023/tabela002.html
@@ -9,12 +9,18 @@
             width: 500px;
             border-collapse: collapse;
             font-family: Arial, Helvetica, sans-serif;
+            position: relative;
         }
         caption{
             font-size: 1.5em;
             font-weight: bold;
             padding: 10px;
             background-color: lightgray;
+        }
+        thead> tr> th{ /*Cabeçalho fixo*/
+            position: sticky;
+            top:-1px;
+            background-color:rgb(123, 121, 121) ;
         }
         thead, tfoot{
             background-color: rgb(123, 121, 121);
