--- a/exercícios/ex.023/tabela004.html
+++ b/exercícios/ex.023/tabela004.html
@@ -27,7 +27,7 @@
     </thead>
     <tbody>
         <tr>
-            <td rowspan="3"><strong>Mulheres</strong></td>
+            <th rowspan="3">Mulheres</th>
             <td>Ana Maria Santos</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -46,7 +46,7 @@
             <td>Big Hero</td>
         </tr>
         <tr>
-            <td rowspan="3"><strong>Homens</strong></td>
+            <th rowspan="3">Homens</th>
             <td>Bruno Mendonça</td>
             <td>Intocáveis</td>
             <td>Amnésia</td>
