atualização exercícios iframe

--- a/exercícios/ex.024/iframe003.html
+++ b/exercícios/ex.024/iframe003.html
@@ -27,7 +27,8 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque earum aut officia consectetur deserunt, eius quia quod! Temporibus nihil aut placeat quo, facilis minus in labore vitae doloribus, voluptas nemo?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur earum placeat, exercitationem quas at, porro velit cum, quam sapiente vel corporis blanditiis nobis assumenda ab nam consequuntur culpa repellat natus?</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc=" <h1> Escolha uma das opções acima </h1> <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellendus veniam reprehenderit, atque cumque facere nihil placeat in quo mollitia iste vero voluptatum officia ad unde ratione commodi nemo perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, fuga nobis at dolorem molestiae cum porro architecto voluptates saepe, id dolor dolore alias, ipsa voluptatibus fugit. Molestiae facilis veritatis pariatur.</p> <img  src='imagens/cursoemvideo-logo.png'> ">
+         
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
