--- a/exercícios/ex.026/mq001/index.html
+++ b/exercícios/ex.026/mq001/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <!--Chamadas de Media Query-->
+    <link rel="stylesheet" href="estilos/tela.css" media="screen"> <!--Para tela-->
+    <link rel="stylesheet" href="estilos/impressora.css" media="print"><!--Para impressora-->
 </head>
 <body>
-  <h1>Olá, Mundo!</h1>  
+  <header>
+    <h1>Notícias</h1>
+    <menu>
+        <ul>
+            <li>Esportes</li>
+            <li>Política</li>
+            <li>Tecnologia</li>
+        </ul>
+    </menu>
+  </header>
+  <main>
+    <article>
+        <h2>Estou aprendento a criar Media Queries</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit illum mollitia rem quae necessitatibus eum consequatur dolore totam? Itaque odio amet exercitationem reiciendis eveniet quibusdam voluptatibus ullam porro ratione ipsam.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quisquam laboriosam sapiente cupiditate. Facere repellat illum vero tempore ducimus doloribus! Non nesciunt expedita excepturi veritatis at sit iusto exercitationem corporis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur enim rem cumque inventore voluptatem beatae aliquid sapiente earum labore perferendis dolores vero ab, sint in natus, vel recusandae eius odio?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores soluta, iste quam harum alias blanditiis. Ipsum fugit corrupti animi, facilis eum totam. Repellat at, minus non ipsam numquam tempora doloremque?</p>
+    </article>
+  </main>
 </body>
 </html>
