--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -3,25 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Minha Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="principal">
-    <h1>Anehelly Roberti Perrony</h1>
-    <p>Olá, Mundo! 👋 Sou estudante de Análise e Desenvolvimento de Sistemas pela Uniasselvi e atualmente trabalho como suporte técnico na empresa Trier Sistemas. Meu objetivo é me tornar uma desenvolvedora web habilidosa e estou constantemente ampliando meus conhecimentos nesta área através de cursos paralelos à minha formação acadêmica. </p>
+    <div class="container">
+        <div class="profile-pic">
+            <img src="imagens/ane.png" alt="foto perfil">
+        </div>
+        <div class="bio">
+            <h1>Anehelly Roberti Perrony</h1>
+            <p>Olá, Mundo! 👋 Sou estudante de Análise e Desenvolvimento de Sistemas pela Uniasselvi e atualmente trabalho como suporte técnico na empresa Trier Sistemas. Meu objetivo é me tornar uma desenvolvedora web habilidosa e estou constantemente ampliando meus conhecimentos nesta área através de cursos paralelos à minha formação acadêmica. </p>
     <p>Além dos meus estudos e trabalho, sou apaixonada por criar experiências incríveis na web e adoro mergulhar em projetos desafiadores, estou sempre em busca de novas oportunidades de crescimento. </p>
     <p>Visite o link abaixo para conhecer meu portfólio e entrar em contato comigo. Estou ansiosa para conectar e colaborar com você!</p>
     <a href="https://github.com/Anehelly" target="_blank"><input type="button" id="botao" value="Portfólio"></a>
-    
-</div>
-
-
-
-<div id="foto">
-    <img src="imagens/ane.png" alt="foto perfil">
-</div>
-
-
+        </div>
+    </div>
 </body>
 </html>
