--- a/exercícios/ex.026/mq005/index.html
+++ b/exercícios/ex.026/mq005/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
         <h1>Burger Haven</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()"> menu </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Telefone</a></li>
@@ -33,5 +35,16 @@
             <p>Venha nos visitar no Burger Haven e descubra por que somos mais do que apenas uma hamburgueria - somos um refúgio para os amantes de hambúrgueres!</p>
         </article>
     </main>
+
+    <script>
+        function clickMenu(){
+            if(itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else{
+                itens.style.display = 'block'
+            }
+        }
+        /*O que esta função faz, SE os itens do menu estiverem na tela, e eu clicar NONE(esconde) SENAO se os itens do menu não estiverem na tela e eu clicar BLOCK (mostra na tela)*/
+    </script>
 </body>
 </html>
