--- a/exercícios/ex.026/mq005/index.html
+++ b/exercícios/ex.026/mq005/index.html
@@ -44,7 +44,7 @@
                 itens.style.display = 'block'
             }
         }
-        /*O que esta função faz, SE os itens do menu estiverem na tela, e eu clicar NONE(esconde) SENAO se os itens do menu não estiverem na tela e eu clicar BLOCK (mostra na tela)*/
+        /*O que esta função faz, SE os itens do menu estiverem na tela, e eu clicar: NONE(esconde) SENAO se os itens do menu não estiverem na tela e eu clicar: BLOCK (mostra na tela)*/
     </script>
 </body>
 </html>
