--- a/exercícios/ex.026/mq005/index.html
+++ b/exercícios/ex.026/mq005/index.html
@@ -6,8 +6,9 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Burger Haven</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()"> menu </span>
@@ -45,6 +46,15 @@
             }
         }
         /*O que esta função faz, SE os itens do menu estiverem na tela, e eu clicar: NONE(esconde) SENAO se os itens do menu não estiverem na tela e eu clicar: BLOCK (mostra na tela)*/
+
+        function mudouTamanho(){
+            if(window.innerWidth >=768){
+                itens.style.display = 'block'
+            }else{
+                itens.style.display = 'none'
+            }
+        }
+        /*Testou a largura da tela*/
     </script>
 </body>
 </html>
